--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
-<!-- index.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Past Imagery Updating</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
 <body>
   <div class="container">
     <h1>Past Imagery Updating</h1>
-
     <div id="slide-container"></div>
 
+    <!-- Navigation -->
     <div class="nav-buttons">
       <button id="backBtn" class="hidden">Back</button>
       <button id="nextBtn">Next</button>
     </div>
   </div>
-
-  <!-- ✅ Moved here, so JS only runs after HTML is fully parsed -->
   <script src="script.js"></script>
 </body>
+</html>
