--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Past Imagery Updating</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
     <h1>Past Imagery Updating</h1>
+
+    <!-- Slide container -->
     <div id="slide-container"></div>
 
     <!-- Navigation -->
@@ -17,6 +19,7 @@
       <button id="nextBtn">Next</button>
     </div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
